// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colorpickr readOnly renders 1`] = `
<body>
  <div>
    <div
      class="colorpickr round inline-block w240 txt-xs flex flex--column"
    >
      <div
        class="flex flex--space-between-main flex-child-no-shrink border-b border--gray-light"
      >
        <div>
          <button
            class="link link--gray pb6 px3 mb-neg1 is-active border-b border-gray"
            data-state="closed"
            data-testid="mode-disc"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon"
              data-testid="icon-circle"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-circle"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              circle
            </span>
          </button>
          <button
            class="link link--gray pb6 px3 mb-neg1"
            data-state="closed"
            data-testid="mode-values"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon"
              data-testid="icon-boolean"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-boolean"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              boolean
            </span>
          </button>
        </div>
        <div
          data-state="closed"
        >
          <button
            class="link link--gray pb6 px3 mb-neg1"
            data-testid="eye-dropper"
            disabled=""
            type="button"
          >
            <svg
              class="h18 w18 icon events-none"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.793 15.5a.5.5 0 0 0 .353-.146L11.75 9.75 12 10a.707.707 0 1 0 1-1l-.25-.25 2.836-2.836a2 2 0 0 0 0-2.828l-.672-.672a2 2 0 0 0-2.828 0L9.25 5.25 9 5a.707.707 0 0 0-1 1l.25.25-5.604 5.604a.5.5 0 0 0-.146.353V15a.5.5 0 0 0 .5.5h2.793Zm-.293-1L11 9 9 7l-5.5 5.5v2h2Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex-child-no-shrink mb6 h240 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full cursor-pointer events-none"
          data-testid="xy"
        >
          <div
            class="absolute z1 round-full border border--2 border--white cursor-move"
            style="background-color: rgb(0, 0, 0); width: 18px; height: 18px; top: calc(100% - 9px); left: calc(0% - 9px);"
          />
          <div
            class="absolute top right bottom left"
            style="background: rgb(255, 0, 0);"
          />
          <div
            class="absolute top right bottom left gradient-hue"
          />
        </div>
      </div>
      <div
        class="flex-child-no-shrink mb6"
      >
        <span
          aria-disabled="true"
          class="relative flex h12 w-full round-full cursor-pointer"
          data-disabled=""
          data-orientation="horizontal"
          data-testid="hue-slider"
          dir="ltr"
          id="hue"
          style="align-items: center; --radix-slider-thumb-transform: translateX(-50%);"
        >
          <div
            class="absolute w-full h3 bg-tile"
          />
          <span
            class="h3 relative flex-child-grow round-full"
            data-disabled=""
            data-orientation="horizontal"
          />
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
          >
            <span
              aria-orientation="horizontal"
              aria-valuemax="360"
              aria-valuemin="0"
              aria-valuenow="0"
              class="w12 h12 round-full block border border--white shadow-darken10"
              data-disabled=""
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style="cursor: ew-resize; background-color: rgb(255, 0, 0);"
            />
          </span>
        </span>
        <span
          aria-disabled="true"
          class="relative flex h12 w-full round-full cursor-pointer"
          data-disabled=""
          data-orientation="horizontal"
          data-testid="alpha-slider"
          dir="ltr"
          id="alpha"
          style="align-items: center; --radix-slider-thumb-transform: translateX(-50%);"
        >
          <div
            class="absolute w-full h3 bg-tile"
          />
          <span
            class="h3 relative flex-child-grow round-full"
            data-disabled=""
            data-orientation="horizontal"
          />
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
          >
            <span
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="w12 h12 round-full block border border--white shadow-darken10"
              data-disabled=""
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style="cursor: ew-resize; background-color: rgb(0, 0, 0);"
            />
          </span>
        </span>
      </div>
      <div
        class="flex mb6"
      >
        <div
          class="w-1/2 h24 flex flex--center-cross"
        >
          <div
            class="relative w-full"
          >
            <div
              class="select-container w-7/12"
            >
              <select
                aria-required="true"
                class="select txt-s color-gray"
                data-testid="colorspace-select"
                id="colorspace"
              >
                <option
                  value="hsl"
                >
                  HSL
                </option>
                <option
                  value="rgb"
                >
                  RGB
                </option>
                <option
                  value="hex"
                >
                  HEX
                </option>
              </select>
              <div
                class="select-arrow"
              />
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
        <div
          class="w-1/2"
        >
          <input
            class="w-full input input--s"
            data-testid="color-input"
            readonly=""
            type="text"
            value="#000"
          />
        </div>
      </div>
      <div
        class="flex round overflow-hidden"
      >
        <div
          class="bg-tile w-1/2 h24 border-r border--gray-faint"
        >
          <button
            aria-disabled="true"
            aria-label="Reset color"
            class="block w-full txt-bold align-center color-transparent color-white-on-hover transition h24"
            data-testid="color-reset"
            disabled=""
            style="background-color: rgb(0, 0, 0);"
            type="button"
          />
        </div>
        <div
          class="bg-tile w-1/2 h24"
        >
          <div
            class="block w-full txt-bold align-center color-transparent color-white-on-hover transition h24"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Colorpickr renders 1`] = `
<body>
  <div>
    <div
      class="colorpickr round inline-block w240 txt-xs flex flex--column"
    >
      <div
        class="flex flex--space-between-main flex-child-no-shrink border-b border--gray-light"
      >
        <div>
          <button
            class="link link--gray pb6 px3 mb-neg1 is-active border-b border-gray"
            data-state="closed"
            data-testid="mode-disc"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon"
              data-testid="icon-circle"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-circle"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              circle
            </span>
          </button>
          <button
            class="link link--gray pb6 px3 mb-neg1"
            data-state="closed"
            data-testid="mode-values"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon"
              data-testid="icon-boolean"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-boolean"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              boolean
            </span>
          </button>
        </div>
        <div
          data-state="closed"
        >
          <button
            class="link link--gray pb6 px3 mb-neg1"
            data-testid="eye-dropper"
            type="button"
          >
            <svg
              class="h18 w18 icon events-none"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.793 15.5a.5.5 0 0 0 .353-.146L11.75 9.75 12 10a.707.707 0 1 0 1-1l-.25-.25 2.836-2.836a2 2 0 0 0 0-2.828l-.672-.672a2 2 0 0 0-2.828 0L9.25 5.25 9 5a.707.707 0 0 0-1 1l.25.25-5.604 5.604a.5.5 0 0 0-.146.353V15a.5.5 0 0 0 .5.5h2.793Zm-.293-1L11 9 9 7l-5.5 5.5v2h2Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex-child-no-shrink mb6 h240 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full cursor-pointer"
          data-testid="xy"
        >
          <div
            class="absolute z1 round-full border border--2 border--white cursor-move"
            style="background-color: rgb(0, 0, 0); width: 18px; height: 18px; top: calc(100% - 9px); left: calc(0% - 9px);"
          />
          <div
            class="absolute top right bottom left"
            style="background: rgb(255, 0, 0);"
          />
          <div
            class="absolute top right bottom left gradient-hue"
          />
        </div>
      </div>
      <div
        class="flex-child-no-shrink mb6"
      >
        <span
          aria-disabled="false"
          class="relative flex h12 w-full round-full cursor-pointer"
          data-orientation="horizontal"
          data-testid="hue-slider"
          dir="ltr"
          id="hue"
          style="align-items: center; --radix-slider-thumb-transform: translateX(-50%);"
        >
          <div
            class="absolute w-full h3 bg-tile"
          />
          <span
            class="h3 relative flex-child-grow round-full"
            data-orientation="horizontal"
          />
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
          >
            <span
              aria-orientation="horizontal"
              aria-valuemax="360"
              aria-valuemin="0"
              aria-valuenow="0"
              class="w12 h12 round-full block border border--white shadow-darken10"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style="cursor: ew-resize; background-color: rgb(255, 0, 0);"
              tabindex="0"
            />
          </span>
        </span>
        <span
          aria-disabled="false"
          class="relative flex h12 w-full round-full cursor-pointer"
          data-orientation="horizontal"
          data-testid="alpha-slider"
          dir="ltr"
          id="alpha"
          style="align-items: center; --radix-slider-thumb-transform: translateX(-50%);"
        >
          <div
            class="absolute w-full h3 bg-tile"
          />
          <span
            class="h3 relative flex-child-grow round-full"
            data-orientation="horizontal"
          />
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
          >
            <span
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="w12 h12 round-full block border border--white shadow-darken10"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style="cursor: ew-resize; background-color: rgb(0, 0, 0);"
              tabindex="0"
            />
          </span>
        </span>
      </div>
      <div
        class="flex mb6"
      >
        <div
          class="w-1/2 h24 flex flex--center-cross"
        >
          <div
            class="relative w-full"
          >
            <div
              class="select-container w-7/12"
            >
              <select
                aria-required="true"
                class="select txt-s color-gray"
                data-testid="colorspace-select"
                id="colorspace"
              >
                <option
                  value="hsl"
                >
                  HSL
                </option>
                <option
                  value="rgb"
                >
                  RGB
                </option>
                <option
                  value="hex"
                >
                  HEX
                </option>
              </select>
              <div
                class="select-arrow"
              />
            </div>
            <div
              role="alert"
            />
          </div>
        </div>
        <div
          class="w-1/2"
        >
          <input
            class="w-full input input--s bg-white"
            data-testid="color-input"
            type="text"
            value="#000"
          />
        </div>
      </div>
      <div
        class="flex round overflow-hidden"
      >
        <div
          class="bg-tile w-1/2 h24 border-r border--gray-faint"
        >
          <button
            aria-label="Reset color"
            class="block w-full txt-bold align-center color-transparent color-white-on-hover transition h24"
            data-state="closed"
            data-testid="color-reset"
            style="background-color: rgb(0, 0, 0);"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon inline-block align-t"
              data-testid="icon-undo"
              focusable="false"
              style="width: 18px;"
            >
              <use
                xlink:href="#icon-undo"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              undo
            </span>
          </button>
        </div>
        <div
          class="bg-tile w-1/2 h24"
        >
          <div
            class="block w-full txt-bold align-center color-transparent color-white-on-hover transition h24"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
